clang/test/BSC/Negative/OperatorOverload/member_ref/member_ref.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct A {
    int a;
};

struct AP {
  struct A ap;
};

int test1() {
    struct A sa = {1};
    struct AP sap = {sa};
    int c = sap->a;                       // expected-error {{member reference type 'struct AP' is not a pointer; did you mean to use '.'?}}
                                          // expected-error@-1 {{no member named 'a' in 'struct AP'}}
    return 0;
}

struct BP {
  struct A *ap;
};

__attribute__((operator ->))
struct A* memberDeref2(struct BP s) {  // expected-error {{overloaded function 'memberDeref2' first parameter or return type must be struct or enumeration pointer type}}
    return s.ap;                       // expected-note@-1 {{candidate function not viable: no known conversion from 'struct CP' to 'struct BP' for 1st argument}}
}

struct CP {
  struct A *ap;
};

int test2() {
    struct A sa = {1};
    struct CP sap = {&sa};
    int c = sap->a;                    // expected-error {{no viable overloaded 'operator->'}}
    return 0;
}

__attribute__((operator ->))
int *memberDeref2(int * s) {               // expected-error {{overloaded function 'memberDeref2' first parameter or return type must be struct or enumeration pointer type}}
    return s;
}

// _Borrow point parameter
struct CPB {
  struct A *_Borrow a;
};

__attribute__((operator ->))
struct A *_Borrow memberDerefC(struct CPB * _Borrow s) { // expected-error {{type of 'struct CPB' cannot be qualified by '_Borrow'(even indirectly), 'struct CPB' contains '_Borrow' type}}
    return s->a;
}

int test3() {
    struct A sa = {1};
    struct CPB scpb = {&_Mut sa};
    int b = scpb->a;
    if (b != 1) {
        return -1;
    }
    scpb->a = 2;
    if (scpb->a != 2) {
        return -1;
    }
    return 0;
}

// const _Borrow point parameter
struct DP {
   struct A *_Borrow a;
};

__attribute__((operator ->))
 struct A *_Borrow memberDerefD(const struct DP * _Borrow s) { // expected-error {{type of 'const struct DP' cannot be qualified by '_Borrow'(even indirectly), 'const struct DP' contains '_Borrow' type}}
    return s->a;
}

int test4() {
    struct A sa = {1};
    struct DP sdp = {&_Mut sa};
    int b = sdp->a;
    if (b != 1) {
        return -1;
    }
    return 0;
}